--- a/style.css
+++ b/style.css
@@ -786,7 +786,6 @@ a img {
 
 .social-media-icons {
   list-style: none;
-  margin: 0.75em 5.556%;
   text-align: center;
 }
 .social-media-icons li {
@@ -814,6 +813,7 @@ a img {
 
 .site-header .social-media-icons {
   float: right;
+  margin: 0.75em 5.556%;
 }
 
 .rtl .social-media-icons li {
@@ -835,7 +835,7 @@ a img {
     margin-right: 2.25em;
   }
 
-  .social-media-icons {
+  .site-header .social-media-icons {
     margin: 0.75em 11.112% 0.75em 0;
   }
 
